--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# VsCode related
+.vscode
+
+
+# Unity related files
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
